# webgpu-web-renderer

./: Cargo.toml  test_output.txt  基于webgpu的渲染引擎.md  实施计划.md  架构原理文档.md  进度报告.md
.cargo/: config.toml
examples/: complex_page_screenshot.rs  cool-effects.html  cool_effects_render.rs  debug_parser.rs  interactive_demo.rs  performance_test.rs  simple_demo.rs
src/: animation.rs  bridge.rs  engine.rs  lib.rs
src/css/: matcher.rs  parser.rs
src/dom/: parser.rs  tree.rs
src/layout/: compute.rs  compute.wgsl  converter.rs  items.rs  mod.rs
src/network/: http.rs  mod.rs
src/renderer/: mod.rs  pipeline.rs  render.wgsl  sdf.rs
tests/: checkpoint_tests.rs  div_render_tests.rs  font_render_tests.rs  font_size_tests.rs  font_wrap_tests.rs  pure_color_image_tests.rs
