[package]
name = "webgpu-web-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.19"
cssparser = "0.30"
html5ever = "0.26"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
bytemuck = { version = "1.13", features = ["derive"] }
image = "0.24"
pollster = "0.3"
ureq = "2.9"

[dev-dependencies]
# image moved to main dependencies
